# tab

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  INDEX.md  UPGRADE_ROADMAP.md
.claude/: settings.json  settings.local.json
.wolf/: anatomy.md  buglog.json  cerebrum.md  (+3 more)
gp2tab/: README.md  USAGE.md  cli.py  pyproject.toml
gp2tab/gp2tab/: __init__.py  __main__.py  formatter_json.py  formatter_llm.py  formatter_tab.py  models.py  parser.py  parser_gp5.py  parser_gp_xml.py  utils.py
gp2tab/gp2tab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gp2tab/tests/: conftest.py  test_formatter_json.py  test_formatter_llm.py  test_formatter_tab.py  test_models.py  test_parser_gp5.py  test_parser_gp_xml.py  test_utils.py
guitar-teacher/: .env  .env.example  DOCS.md  README.md  pyproject.toml
guitar-teacher/guitar_teacher/: cli.py  config.py
guitar-teacher/guitar_teacher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
guitar-teacher/guitar_teacher/api/: app.py  auth.py  deps.py  github_client.py  jobs.py
guitar-teacher/guitar_teacher/api/routers/: analysis.py  queue.py  songs.py  theory.py
guitar-teacher/guitar_teacher/core/: analyzer.py  fretboard.py  models.py  note_utils.py  theory.py
guitar-teacher/guitar_teacher/lessons/: generator.py  templates.py
guitar-teacher/guitar_teacher/llm/: enhancer.py  providers.py
guitar-teacher/tests/: conftest.py  test_analyzer.py  test_cli.py  test_fretboard.py  test_generator.py  test_note_utils.py  test_providers.py  test_theory.py
guitar-teacher/tests/api/: conftest.py  test_analysis_router.py  test_app.py  test_auth.py  test_github_client.py  test_jobs.py  test_queue_router.py  test_songs_router.py  test_theory_router.py
guitar-teacher/theory/: chords.yaml  intervals.yaml  scales.yaml  techniques.yaml
guitar-teacher/theory/lesson_templates/: assembly_lesson.md.j2  breakdown.md.j2  performance_lesson.md.j2  practice_plan.md.j2  section_lesson.md.j2  technique_intro.md.j2  theory_overview.md.j2
(+145 files in other folders)
