[project]
name = "guitar-teacher"
version = "0.1.0"
description = "Local guitar learning tool - theory analysis, lesson generation, fretboard reference"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40", "openai>=1.0", "httpx>=0.27"]

[project.scripts]
guitar-teacher = "guitar_teacher.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["guitar_teacher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
