[project]
name = "guitar-teacher"
version = "0.1.0"
description = "Local guitar learning tool - theory analysis, lesson generation, fretboard reference"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40", "openai>=1.0", "httpx>=0.27"]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pyjwt>=2.9",
    "httpx>=0.27",
    "python-multipart>=0.0.18",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
guitar-teacher = "guitar_teacher.cli:main"
guitar-teacher-api = "guitar_teacher.api.app:start"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["guitar_teacher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
